Fix image spill problem on mobile and navigation on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -58,6 +58,7 @@ nav {
     ul {
         list-style: none;
         display: flex;
+        flex-wrap: wrap;
         margin: 0.2rem 0;
         padding: 0;
         li {
@@ -90,7 +91,7 @@ img.photo {
     padding: 1rem;
     border: 1px solid #ccc;
     margin: 1rem auto;
-    max-width: 750px;
+    max-width: 90%;
 }
 
 img.thumbnail {
